added header file

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        
         <div class="banner">
             <div class="banner-content">
-                <h3 class="banner-title">All Thinks Are Possible If You believe</h3>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-                <button class="btn-praimary">Contact Us</button>
-                <img src="images/banner/banner3.png" alt="">
+             <h3 class="banner-item">All Thinks Are Possible If You believe</h3>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <button class="btn-praimary">Contact Us</button>
             </div>
         </div>
     </header>
